# Preselector

./: .markdownlint.yaml  .pre-commit-config.yaml  GitHubRepoPublicReleaseApproval.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yaml
config/: config.ini  config.json  metadata.sigmf-meta
src/: Amplifier.py  CalSource.py  Filter.py  HardwareSpec.py  Preselector.py  RfPath.py
src/its_preselector/: Amplifier.py  CalSource.py  Filter.py  HardwareSpec.py  Preselector.py  RfPath.py  __init__.py  amplifier.py  cal_source.py  configuration_exception.py  controlbyweb_web_relay.py  filter.py  hardware_spec.py  preselector.py  rf_path.py  web_relay.py  web_relay_preselector.py
src/its_preselector/test/: metadata.sigmf-meta  mock_preselector.py  null_preselector.sigmf-meta  test_amplifier.py  test_cal_source.py  test_controlbyweb_web_relay.py  test_filter.py  test_metadata.sigmf-meta  test_preselector.py  test_rfpaths.py  test_web_relay_preselector.py
tests/: null_preselector.sigmf-meta  sensor_definition.json  test_amplifier.py  test_cal_source.py  test_controlbyweb_web_relay.py  test_filter.py  test_metadata.sigmf-meta  test_preselector.py  test_rfpaths.py  test_web_relay_preselector.py
