[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "its-preselector"
dynamic = ["version"]
description = "A package to control the ITS web relay-based preselector"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]

maintainers = [
    { name = "Doug Boulware", email = "dboulware@ntia.gov" },
]

keywords = [
    "preselector", "SDR", "NTIA", "web relay", "API",
    "radio", "NTIA", "ITS", "telecommunications", "spectrum",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "requests>=2.25.1",
    "defusedxml>=0.7.1"
]

[project.optional-dependencies]
dev = [
    "hatchling>=1.6.0,<2.0",
    "pre-commit>=2.20.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "twine>=4.0.1,<5.0"
]

[project.urls]
"Repository" = "https://github.com/NTIA/Preselector"
"Bug Tracker" = "https://github.com/NTIA/Preselector/issues"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"

[tool.hatch.version]
path = "src/its_preselector/__init__.py"
