[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "its-preselector"
dynamic = ["version"]
description = "A package to control the ITS web relay-based preselector"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]

maintainers = [
    { name = "Doug Boulware", email = "dboulware@ntia.gov" },
]

keywords = [
    "preselector", "SDR", "NTIA", "web relay", "API",
    "radio", "NTIA", "ITS", "telecommunications", "spectrum",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "defusedxml>=0.7.1,<1.0",
    "httpx>=0.24.0,<1.0",
]

[project.optional-dependencies]
test= [
    "pytest>=7.3.1,<8.0",
    "pytest-cov>=3.0.0,<4.0",
    "tox>=4.5.1,<5.0",
]

dev = [
    "its-preselector[test]",
    "hatchling>=1.14.1,<2.0",
    "pre-commit>=3.3.1,<4.0",
]

[project.urls]
"Repository" = "https://github.com/NTIA/Preselector"
"Bug Tracker" = "https://github.com/NTIA/Preselector/issues"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"

[tool.hatch.version]
path = "src/its_preselector/__init__.py"
