[metadata]
name = its-preselector
version = 2.0.0
author = ITS
author_email = dboulware@ntia.gov
description = A package to control the ITS web relay based preselector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ntia/Preselector
project_urls =
    Bug Tracker = https://github.com/ntia/Preselector/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    its_preselector
python_requires = >=3.7
install_requires =
    requests>=2.25.1

[options.packages.find]
where = src